<resources>
    <string name="app_name">新工程</string>

    <string name="app">New Project</string>
    <string name="none"> </string>
    <string name="entry">进入首页</string>
    <string name="buy">购买</string>
    <string name="name">Jaeger</string>
    <string name="buy_style">请选择购买方式</string>
    <!-- 分享 -->
    <string name="webview">WebView</string>
    <string name="share">分享</string>
    <string name="share_title">分享到</string>
    <string name="moments">朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="bottomsheet">bottomsheet</string>
    <string name="service">Service</string>
    <string name="notify_service">NotifyService</string>
    <string name="textinput_layout">TextInputLayout</string>
    <string name="recycler_view">Recycler_View</string>
    <string name="MD">Material_Design</string>
    <string name="okHttp">OkHttp</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tab_layout">TabLayout</string>
    <string name="Sharing_text_share_on">分享到:</string>
    <string name="wechatttf">0</string>
    <string name="Sharing_dialog_item_WeChat">微信</string>
    <string name="Sharing_dialog_item_WeiBo">新浪微博</string>
    <string name="Sharing_dialog_item_facebook">Facebook</string>
    <string name="Sharing_dialog_item_twitter">推特</string>
    <string name="Sharing_dialog_item_google_plus">G+</string>
    <string name="shareweibottf">1</string>
    <string name="sharefbttf">2</string>
    <string name="sharetwitterttf">3</string>
    <string name="sharegplusttf">4</string>
    <string name="sharecustomttf">5</string>
    <string name="Sharing_dialog_item_custom">其它社交媒体</string>
    <string name="Sharing_dialog_description">分享获取奖励</string>

    <!--TextInputLayout-->
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="share_elements">shareElements</string>

    <string name="accessibility_service">监听手机事件</string>
    <string name="auto_install">自动安装应用</string>
</resources>
