<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/moments"
            android:icon="@mipmap/ic_share_moments"
            android:title="@string/webview" />
        <item
            android:id="@+id/wechat"
            android:icon="@mipmap/ic_share_wechat"
            android:title="@string/bottomsheet" />
        <item
            android:id="@+id/Service"
            android:icon="@mipmap/ic_share_weibo"
            android:title="@string/service" />
    </group>

    <item
        android:id="@+id/qq"
        android:icon="@mipmap/ic_share_qq"
        android:title="@string/qq" />
    <item
        android:id="@+id/qzone"
        android:icon="@mipmap/ic_share_qzone"
        android:title="@string/qzone" />
    <item
        android:icon="@mipmap/ic_share_moments"
        android:title="@string/moments" />
    <item
        android:icon="@mipmap/ic_share_wechat"
        android:title="@string/wechat" />
    <item
        android:icon="@mipmap/ic_share_weibo"
        android:title="@string/weibo" />
    <item
        android:icon="@mipmap/ic_share_qq"
        android:title="@string/qq" />
    <item
        android:icon="@mipmap/ic_share_qzone"
        android:title="@string/qzone" />
</menu>