<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_share_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">


        <LinearLayout
            android:id="@+id/share_to_textLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/shareto_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_to_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sharing_text_share_on"
                android:textColor="@color/share_light_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_dialog_wechat_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_dialog_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/wechat_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechatttf"
                android:textColor="@color/share_wechat"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Sharing_dialog_item_WeChat"
                android:textColor="@color/share_text_color"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_dialog_weibo_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_dialog_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/weibo_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shareweibottf"
                android:textColor="@color/share_weibo"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Sharing_dialog_item_WeiBo"
                android:textColor="@color/share_text_color"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_dialog_facebook_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_dialog_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/facebook_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharefbttf"
                android:textColor="@color/share_fb_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Sharing_dialog_item_facebook"
                android:textColor="@color/share_text_color"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_dialog_twitter_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_dialog_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/twitter_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharetwitterttf"
                android:textColor="@color/share_twitter"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Sharing_dialog_item_twitter"
                android:textColor="@color/share_text_color"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_dialog_googleplus_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_dialog_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/googleplus_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_googleplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharegplusttf"
                android:textColor="@color/share_googlePlus"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/googleplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Sharing_dialog_item_google_plus"
                android:textColor="@color/share_text_color"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_dialog_custom_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_dialog_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/custom_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharecustomttf"
                android:textColor="@color/share_custom"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Sharing_dialog_item_custom"
                android:textColor="@color/share_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/get_coins_textLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/share_get_coins_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/share_dialog_share_get_nb_coins_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sharing_dialog_description"
                android:textColor="@color/share_light_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/below_dialog_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
</LinearLayout>
